# dz06

./: README.md
.github/workflows/: ci.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp
formatter_lib/formatter_lib/: formatter.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: solver.cpp  solver.h
